z-index fix

--- a/src/css/partials/resources.css
+++ b/src/css/partials/resources.css
@@ -11,7 +11,7 @@
     position: relative;
 
     nav {
-      z-index: 10;
+      z-index: 15;
     }
 
     .center-diamond {
